<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_postcard_edit_content"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_above="@+id/ll_postcard_buttons"
    android:layout_below="@+id/img_postcard_photo"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_postcard_destination"
        style="@style/PostcardText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/postcard_content_margin_end"
        android:layout_marginStart="@dimen/postcard_content_margin_start"
        android:hint="@string/postcard_details_edit_destination" />

    <EditText
        android:id="@+id/et_postcard_date"
        style="@style/PostcardText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_postcard_destination"
        android:layout_marginEnd="@dimen/postcard_content_margin_end"
        android:layout_marginStart="@dimen/postcard_content_margin_start"
        android:hint="@string/postcard_details_edit_date" />

    <EditText
        android:id="@+id/et_postcard_text"
        style="@style/PostcardText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_postcard_date"
        android:layout_marginEnd="@dimen/postcard_content_margin_end"
        android:layout_marginStart="@dimen/postcard_content_margin_start"
        android:layout_marginTop="20dp"
        android:gravity="top"
        android:hint="@string/postcard_details_edit_text"
        android:inputType="textMultiLine"
        android:lines="7"
        android:scrollbars="vertical" />

    <Button
        android:id="@+id/btn_save"
        android:layout_width="100dp"
        android:layout_height="@dimen/postcard_button_height"
        android:layout_below="@+id/et_postcard_text"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="20dp"
        android:background="@android:color/holo_blue_dark"
        android:text="@string/postcard_details_save"
        android:textColor="@android:color/white" />


</RelativeLayout>